This is the modified version where user input is taken on the website and can check what post is being created through the name on the link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link class="h-1" rel="icon" type="image/svg+xml" href="src/images/svg/AJ.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abass Jammal | Personal Website</title>
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
   </head>
   <body class="font-inter antialiased bg-color-100 text-gray-900 tracking-tight">
     <noscript>You need to enable JavaScript to run this app.</noscript>
